ticketing/k8s/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "ticketing.dev"
      port:
        number: 80
        name: http
        protocol: HTTP
