ticketing/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: life4honor/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    matchLabels:
      app: auth
    ports:
      - name: auth
        protocol: TCP
        port: 3000
        targetPort: 3000
---
apiVersion:  networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-VirtualService
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            regex: /api/users/?(.*)
      route:
        - destination:
            host: auth-service
            port:
              number: 3000
